# axga-harness-agent-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.test  KEYS.md  PLAN.md  PROGRESS.md  README.md  ROADMAP.md  axga-v0.1.0-x86_64-linux-musl.tar.gz.sha256  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/axga-ai/: Cargo.toml
crates/axga-ai/src/: lib.rs  request.rs  stream.rs
crates/axga-ai/src/providers/: anthropic.rs  deepseek.rs  mod.rs  openai.rs
crates/axga-browser/: Cargo.toml
crates/axga-browser/src/: headless.rs  lib.rs  webbridge.rs
crates/axga-cli/: Cargo.toml
crates/axga-cli/src/: daemon.rs  discord.rs  main.rs  mcp.rs  onboard.rs  runtime.rs  telegram.rs  tui_mode.rs
crates/axga-core/: Cargo.toml
crates/axga-core/src/: agent_loop.rs  config.rs  context.rs  executor.rs  goal.rs  io_limits.rs  lib.rs  orchestrator.rs  permission.rs  provider_registry.rs  retry.rs  session.rs  state.rs
crates/axga-core/src/tools/: agent.rs  agent_swarm.rs  ask_user.rs  code.rs  cron.rs  edit.rs  fetch_url.rs  fs.rs  goal.rs  memctrl.rs  memctrl_native.rs  mod.rs  plan.rs  registry.rs  shell.rs  task_list.rs  task_manager.rs  task_output.rs  task_stop.rs  web_search.rs
crates/axga-core/tests/: bounded_io_tests.rs  tool_registry_tests.rs
crates/axga-shared/: Cargo.toml
crates/axga-shared/src/: error.rs  lib.rs  types.rs
crates/axga-shared/tests/: shared_tests.rs
crates/axga-tui/: Cargo.toml
crates/axga-tui/src/: app.rs  events.rs  lib.rs  markdown.rs  theme.rs
crates/axga-tui/src/ui/: chat.rs  diff.rs  mod.rs  status.rs
docs/: architecture.md
docs/adr/: README.md
scripts/: axga-bot.service  build-release.sh  docker-memory-test.sh  e2e-test.sh  github-release.sh  memory-profile.sh  sha256-update.sh
scripts/aur/: PKGBUILD
scripts/homebrew/: axga.rb
