[package]
name = "axga-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axga-shared.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream.workspace = true
base64.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio-test = "0.4"
