[package]
name = "axga-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified LLM provider abstraction for AXGA (OpenAI, Anthropic, DeepSeek)"
repository = "https://github.com/KJ-AIML/axga-harness-agent-rs"
keywords = ["ai", "llm", "openai", "anthropic", "deepseek"]
categories = ["development-tools", "api-bindings"]

[dependencies]
axga-shared.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream.workspace = true
base64.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio-test = "0.4"
