[package]
name = "axga-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "axga"
path = "src/main.rs"

[dependencies]
axga-shared.workspace = true
axga-core.workspace = true
axga-tui.workspace = true
axga-browser = { workspace = true, optional = true }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
reqwest.workspace = true
mimalloc = "0.1"

[features]
browser = ["axga-browser/chromiumoxide"]
