[package]
name = "axga-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axga-shared.workspace = true
axga-ai.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream.workspace = true
glob.workspace = true
regex.workspace = true
similar.workspace = true
toml = "0.8"
