[package]
name = "axga-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AXGA shared types, errors, and memory limits"
repository = "https://github.com/KJ-AIML/axga-harness-agent-rs"
keywords = ["ai", "agent", "llm"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
