[package]
name = "axga-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
regex.workspace = true
unicode-width = "0.2"
